[metadata]
name = lpgrabber
summary = Yet another stats collector for Launchpad
description-file = README.rst
license = Apache License, Version 2.0
author = Dmitry Pyzhov
author-email = dpyzhov@mirantis.com
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Environment :: Console
home-page=https://github.com/dmi-try/lpgrabber

[entry_points]
console_scripts =
    lpgrabber = lpgrabber.main:main
lpgrabber.app =
    simple = lpgrabber.simple:Simple
    two_part = lpgrabber.simple:Simple
    error = lpgrabber.simple:Error
    list files = lpgrabber.list:Files
    files = lpgrabber.list:Files
    file = lpgrabber.show:File
    show file = lpgrabber.show:File
    unicode = lpgrabber.encoding:Encoding
    teams = lpgrabber.teams:Teams
    bugs = lpgrabber.bugs:Bugs
    trello = lpgrabber.trellosync:TrelloSync
    trellostats = lpgrabber.trellostats:TrelloStats
    killdupes = lpgrabber.misc:KillDupes